--- a/.github/workflows/CF_deploy.yaml
+++ b/.github/workflows/CF_deploy.yaml
@@ -9,7 +9,9 @@ jobs:
   run-tests:
     name: Clearflight-Checks
     runs-on: ubuntu-latest
-
+    env:
+      AVIATIONSTACK_API_KEY: ${{ secrets.AVIATIONSTACK_API_KEY }}
+      WEATHERSTACK_API_KEY: ${{ secrets.WEATHER_API_KEY }}
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
@@ -30,3 +32,5 @@ jobs:
 
     - name: Run checks
       run: make run-checks
+
+  
