--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# Requirements for the FastAPI application
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.6.15
-click==8.2.1
-fastapi==0.115.13
-gunicorn==23.0.0
+charset-normalizer==3.4.2
+dotenv==0.9.9
+fastapi==0.115.14
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -14,12 +13,14 @@ packaging==25.0
 pluggy==1.6.0
 pydantic==2.11.7
 pydantic_core==2.33.2
-Pygments==2.19.1
+Pygments==2.19.2
 pytest==8.4.1
 pytest-testdox==3.1.0
+python-dotenv==1.1.1
+redis==6.2.0
+requests==2.32.4
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
-uvicorn==0.34.3
-python-dotenv==1.1.1
+urllib3==2.5.0
