--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 dotenv==0.9.9
 fastapi==0.115.14
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -24,3 +25,5 @@ starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
+
+uvicorn==0.35.0
