--- a/.github/workflows/CF_deploy.yaml
+++ b/.github/workflows/CF_deploy.yaml
@@ -33,4 +33,27 @@ jobs:
     - name: Run checks
       run: make run-checks
 
-  
+  docker-build:
+    name: Clearflight-Docker-Build
+    runs-on: ubuntu-latest
+    needs: run-tests
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/clearflightapi:latest
