Env variables now handled via Pydantic-settings in seperate config file

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
+# External API Keys
 AVIATIONSTACK_API_KEY=paste_key_here
 WEATHERSTACK_API_KEY=paste_key_here
+
+# Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
 CACHE_EXPIRE=3600 # Cache expiry time, feel free to adjust for optimisation
