--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ packaging==25.0
 pluggy==1.6.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydantic-settings>=2.0.0
 Pygments==2.19.2
 pytest==8.4.1
 pytest-testdox==3.1.0
